fix highlighting on ios

--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ div.space {
   background-color: #fff;
 }
 
-body {
+html, body {
   margin: 0px;
+  position: fixed;
 }
 
 body > div {
